[gd_scene load_steps=9 format=2]

[ext_resource path="res://theme/game_ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://level/game_ui.gd" type="Script" id=2]
[ext_resource path="res://theme/game_ui_website_entry_theme.tres" type="Theme" id=3]
[ext_resource path="res://theme/fonts/minigame_timer_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/web_entry_block.png" type="Texture" id=5]
[ext_resource path="res://theme/styles/http_box.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 20, 30 )
margin_right = 8.30754
margin_top = 5.84124
margin_bottom = 7.00949

[node name="game_ui" type="CanvasLayer"]
unique_name_in_owner = true
script = ExtResource( 2 )

[node name="theme_node" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="website_entry" type="Panel" parent="theme_node"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -344.0
margin_top = -200.0
margin_right = 6.0
margin_bottom = -160.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 2 )

[node name="website_hbox" type="HBoxContainer" parent="theme_node/website_entry"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 5.0
margin_right = -15.0
margin_bottom = -5.0
custom_constants/separation = 0

[node name="http_box" type="Panel" parent="theme_node/website_entry/website_hbox"]
margin_right = 125.0
margin_bottom = 30.0
rect_min_size = Vector2( 125, 0 )
custom_styles/panel = ExtResource( 6 )

[node name="http_label" type="RichTextLabel" parent="theme_node/website_entry/website_hbox/http_box"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -13.0
margin_bottom = 14.0
bbcode_enabled = true
bbcode_text = "[right]https://www.[/right]"
text = "https://www."
scroll_active = false

[node name="website_entry_box" type="Panel" parent="theme_node/website_entry/website_hbox"]
margin_left = 125.0
margin_right = 315.0
margin_bottom = 30.0
rect_min_size = Vector2( 190, 0 )
custom_styles/panel = SubResource( 1 )

[node name="website_entry_label" type="RichTextLabel" parent="theme_node/website_entry/website_hbox/website_entry_box"]
unique_name_in_owner = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -13.5
margin_right = 220.0
margin_bottom = 13.5
bbcode_enabled = true
scroll_active = false

[node name="data_label" type="Label" parent="theme_node"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -156.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 23.0
rect_min_size = Vector2( 150, 20 )
custom_fonts/font = ExtResource( 4 )
text = "Data: 0,000,000"
align = 2

[node name="proximity" type="HBoxContainer" parent="theme_node"]
margin_left = 10.0
margin_top = 10.0
margin_right = 672.0
margin_bottom = 30.0
custom_constants/separation = 10

[node name="proximity_warning" type="Label" parent="theme_node/proximity"]
unique_name_in_owner = true
margin_right = 152.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 4 )
text = "Firewall Proximity:"
align = 2

[node name="firewall_proximity" type="ProgressBar" parent="theme_node/proximity"]
unique_name_in_owner = true
margin_left = 162.0
margin_right = 662.0
margin_bottom = 20.0
rect_min_size = Vector2( 500, 20 )
percent_visible = false
